# rfim_assignment

./: .gitignore  CMakeLists.txt  README.md
rfim/: CMakeLists.txt
rfim/external_libs/: CMakeLists.txt
rfim/src/: CMakeLists.txt  DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  FileProcessor.h  FileProcessorInfo.h  GetAbsoluteFilepathFromRelative.h  MadParallelRfi.h  MadRfi.h  MedianParallelRfi.h  MedianStandardDeviationRfi.h  RfiStrategy.h  RudimentaryRfi.h  TimeFrequency.cpp  TimeFrequency.h  TimeFrequencyMetadata.cpp  TimeFrequencyMetadata.h
rfim_demo/: CMakeLists.txt
rfim_demo/src/: CMakeLists.txt  rfim_demo.cpp
rfim_tests/: CMakeLists.txt
rfim_tests/external_libs/: CMakeLists.txt
rfim_tests/src/: CMakeLists.txt  DataReaderTests.cpp  DataWriterTests.cpp  FileProcessorTests.cpp  MadRfiTests.cpp  MedianStandardDeviationRfiTests.cpp  RudimentaryRfiTests.cpp  TimeFrequencyMetadataTests.cpp  TimeFrequencyTests.cpp
